Optimize equals() for canonize()